--- a/edits.css
+++ b/edits.css
@@ -28,7 +28,7 @@ h4{
     text-align: center;
 }
 .boxed {
-   background-image:url(https://vignette.wikia.nocookie.net/cswikia/images/7/7c/De_dust2_new_v4.jpg/revision/latest?cb=20171109141302);
+   background-image:url(https://drive.google.com/file/d/1tbZp4QjYsgF6Y-Ljl9RjaFoQO3RlIUSl/view?usp=sharing);
    background-position: left;
    background-repeat: no-repeat;
     border: 10px solid red ;
