--- a/edits.css
+++ b/edits.css
@@ -28,7 +28,7 @@ h4{
     text-align: center;
 }
 .boxed {
-   background-image:url(https://drive.google.com/file/d/1tbZp4QjYsgF6Y-Ljl9RjaFoQO3RlIUSl/view?usp=sharing);
+   background-image:url(https://imgur.com/a/9ZzrHJH);
    background-position: left;
    background-repeat: no-repeat;
     border: 10px solid red ;
