--- a/edits.css
+++ b/edits.css
@@ -28,7 +28,7 @@ h4{
     text-align: center;
 }
 .boxed {
-   background-image:url(https://imgur.com/a/9ZzrHJH);
+   background-image:url(om.png);
    background-position: left;
    background-repeat: no-repeat;
     border: 10px solid red ;
